--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    transition: all 2s;
+}
+
+
+app-header {
+    position: relative;
+    min-width: 100%;
+    top: 0;
+}
