--- a/src/app/components/maestro/maestro.component.html
+++ b/src/app/components/maestro/maestro.component.html
@@ -1,3 +1,16 @@
 <app-header (verSeccion)="irAElemento($event) "></app-header>
-
+<div>
+    <div>
+        <span class="telon" style="text-align: center; padding-left: 30px;">
+            <p style="margin-top: 250px;">
+                H.C.S
+            </p>
+            <p style="font-size: 15px; font-weight: normal;">
+                HERRAMIENTA DE COTIZACIONES DEL SENA
+            </p>
+        </span>
+    </div>
+    <img src="./../../../assets/images/imagenFondo.webp" alt="" style="width: 100%; height: 700px; object-fit: cover">
+</div>
+<app-aseguradora id="Aseguradoras"></app-aseguradora>
 <app-footer></app-footer>
