--- a/src/app/components/aseguradora/aseguradora.component.scss
+++ b/src/app/components/aseguradora/aseguradora.component.scss
@@ -19,3 +19,22 @@
   height: 130px;
   cursor: pointer;
 }
+
+th {
+  min-width: 100px;
+}
+
+input {
+  width: 100%;
+}
+
+.list-items {
+  width: 100%;
+  margin-bottom: 10px;
+  text-align: center;
+  padding-top: 6px;
+}
+
+.bolder{
+    font-weight: bold;
+}
