--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,13 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
-* {
-    transition: all 2s;
-}
-
-
 app-header {
-    position: relative;
+    position: fixed;
     min-width: 100%;
     top: 0;
+    z-index: 100;
 }
 
 .modal-open {
