--- a/src/app/components/aseguradora/aseguradora.component.html
+++ b/src/app/components/aseguradora/aseguradora.component.html
@@ -21,7 +21,7 @@
 <ng-template #mapfre let-c="close" let-d="dismiss">
     <form [formGroup]="aseguradoraFormGroup" *ngIf="aseguradoraFormGroup">
         <div class="modal-header">
-            <h4 class="modal-title">
+            <h4 class="modal-title" style="text-align: center; width: 100%;">
                 Formulario MAPFRE
             </h4>
             <button type="button" class="close" aria-label="Close" (click)="closeModal()">
@@ -31,15 +31,15 @@
         <div class="modal-body">
             <section>
                 <div [formGroup]="aseguradoraFormGroup.controls.datosCliente">
-                    <div class="row" style="color: #ec2c01;">
-                        <div class="col-3">
+                    <div class="row" style="color: #ec2c01; width: 100%;">
+                        <div class="col-4">
                             <img src="./../../../assets/images/mapfre.jpg" alt="" width="228px" height="110px">
                         </div>
-                        <div class="col-4" style="color: #41a02c;">
+                        <div class="col-4" style="color: #41a02c;  font-size: 1.4em; text-align: center;">
                             COTIZACION POLIZA DE TODO RIESGOS DAÑO MATERIAL EQUIEMPRESA
                         </div>
-                        <div class="col-5" style="color: #41a02c;">
-                            PYMES
+                        <div class="col-4" style="color: #41a02c; text-align: right; font-size: 1.5em;">
+                            PYME
                         </div>
                     </div>
                     <!-- Datos de cliente  INDEPENDIZAR EN SUB COMPONENTE PARA LA REUTILIZACION -->
@@ -202,10 +202,10 @@
                             Año de construccion
                         </div>
                         <div class="col-2">
-                            <input type="text" class="form-control" formControlName="añoConstruccion"
+                            <input type="text" class="form-control" formControlName="anoConstruccion"
                                 ngDefaultControl />
                             <span
-                                *ngIf="aseguradoraFormGroup.get('datosRiesgo').get('añoConstruccion').hasError('required') && (aseguradoraFormGroup.get('datosRiesgo').get('añoConstruccion').dirty || aseguradoraFormGroup.get('datosRiesgo').get('añoConstruccion').touched)"
+                                *ngIf="aseguradoraFormGroup.get('datosRiesgo').get('anoConstruccion').hasError('required') && (aseguradoraFormGroup.get('datosRiesgo').get('anoConstruccion').dirty || aseguradoraFormGroup.get('datosRiesgo').get('anoConstruccion').touched)"
                                 class="text-danger">
                                 * Campo requerido
                             </span>
@@ -283,9 +283,9 @@
                         </div>
                         <div class="col-2"> Daños Previos</div>
                         <div class="col-2">
-                            <input type="text" class="form-control" formControlName="dañosPrevios" ngDefaultControl />
+                            <input type="text" class="form-control" formControlName="danosPrevios" ngDefaultControl />
                             <span
-                                *ngIf="aseguradoraFormGroup.get('datosRiesgo').get('dañosPrevios').hasError('required') && (aseguradoraFormGroup.get('datosRiesgo').get('dañosPrevios').dirty || aseguradoraFormGroup.get('datosRiesgo').get('dañosPrevios').touched)"
+                                *ngIf="aseguradoraFormGroup.get('datosRiesgo').get('danosPrevios').hasError('required') && (aseguradoraFormGroup.get('datosRiesgo').get('danosPrevios').dirty || aseguradoraFormGroup.get('datosRiesgo').get('danosPrevios').touched)"
                                 class="text-danger">
                                 * Campo requerido
                             </span>
@@ -303,7 +303,7 @@
                     </div>
                 </div>
                 <!-- Relacion de bienes INDEPENDIZAR EN SUB COMPONENTE PARA LA REUTILIZACION -->
-                <div class="form-datos-cliente" [formGroup]="aseguradoraFormGroup.controls.bienesYValores">
+                <div class="form-relacion-bienes" [formGroup]="aseguradoraFormGroup.controls.bienesYValores">
                     <div class="row" style="margin-bottom: 10px;">
                         <div class="col-4" style="color: #41a02c;">Relacion de bienes</div>
                         <div class="col-4" style="color: #41a02c;">Valores asegurados</div>
@@ -311,9 +311,10 @@
                         <div class="row list-items" *ngFor=" let item of bienesYValores">
                             <div class="col-4">{{item.nombre}}</div>
                             <div class="col-4">
-                                <input type="text" class="form-control" formControlName="{{item.idFormulario}}" ngDefaultControl />
+                                <input type="number" class="form-control" formControlName="{{item.idFormulario}}"
+                                    ngbTooltip="Valor minimo (1)" placement="right" ngDefaultControl />
                                 <span
-                                    *ngIf="aseguradoraFormGroup.get('datosRiesgo').get('bienesAsegurados').hasError('required') && (aseguradoraFormGroup.get('datosRiesgo').get('bienesAsegurados').dirty || aseguradoraFormGroup.get('datosRiesgo').get('bienesAsegurados').touched)"
+                                    *ngIf="aseguradoraFormGroup.get('bienesYValores').controls[item.idFormulario].hasError('required') || aseguradoraFormGroup.get('bienesYValores').controls[item.idFormulario].hasError('min') && (aseguradoraFormGroup.get('bienesYValores').controls[item.idFormulario].dirty || aseguradoraFormGroup.get('bienesYValores').controls[item.idFormulario].touched)"
                                     class="text-danger">
                                     * Campo requerido
                                 </span>
@@ -321,19 +322,36 @@
                         </div>
                     </div>
                 </div>
-                <!-- Relacion de bienes INDEPENDIZAR EN SUB COMPONENTE PARA LA REUTILIZACION -->
-                <div class="row" style="margin-bottom: 10px;">
-                    <div class="col-12" style="color: #41a02c;">Amparos</div>
-                    <hr style="width: 98%; background: #41a02c; margin: auto;">
-                    <div class="row" style="min-width: 45%; max-width: 45%; margin: 0.5%;"
-                        *ngFor=" let item of amparos">
-                        <div class="col-3" style="min-width: 50%;" [ngClass]="item.important ? 'bolder': ''">
-                            {{item.nombre}}
-                        </div>
-                        <div class="col-3" style="min-width: 50%;">
-                            <input type="text" class="form-control" />
+                <!-- Amparos INDEPENDIZAR EN SUB COMPONENTE PARA LA REUTILIZACION -->
+                <div class="form-relacion-bienes" [formGroup]="aseguradoraFormGroup.controls.amparos">
+                    <div class="row" style="margin-bottom: 10px;">
+                        <div class="col-12" style="color: #41a02c;">Amparos</div>
+                        <hr style="width: 98%; background: #41a02c; margin: auto;">
+                        <div class="row" style="min-width: 45%; max-width: 45%; margin: 0.5%;"
+                            *ngFor=" let item of amparos">
+                            <div class="col-3" style="min-width: 50%;" [ngClass]="item.important ? 'bolder': ''">
+                                {{item.nombre}}
+                            </div>
+                            <div class="col-3" style="min-width: 50%;">
+                                <input type="text" class="form-control" formControlName="{{item.idFormulario}}"
+                                    ngbTooltip="Valor minimo (1)" placement="right" ngDefaultControl />
+                                <span
+                                    *ngIf="aseguradoraFormGroup.get('amparos').controls[item.idFormulario].hasError('required') || aseguradoraFormGroup.get('amparos').controls[item.idFormulario].hasError('min') && (aseguradoraFormGroup.get('amparos').controls[item.idFormulario].dirty || aseguradoraFormGroup.get('amparos').controls[item.idFormulario].touched)"
+                                    class="text-danger">
+                                    * Campo requerido
+                                </span>
+                            </div>
                         </div>
                     </div>
+                </div>
+                <div class="row">
+                    <div class="col-3 bolder">
+                        Total valor asegurado
+                    </div>
+                    <div class="col-3">
+                        {{totalValorAsegurado}}
+                    </div>
+
                 </div>
                 <!-- Asistencia PYMES INDEPENDIZAR EN SUB COMPONENTE PARA LA REUTILIZACION -->
                 <div class="row" style="margin-bottom: 10px;">
@@ -349,8 +367,61 @@
         <div class="modal-footer">
             <label style="font-weight: bold;">Por favor validar la direccion de correo a la cual se enviara el
                 documento.</label>
-            <button type="button" class="btn btn-secondary" (click)="generarDocumento()">Generar Documento</button>
+            <button type="button" class="btn btn-primary"
+                [disabled]="aseguradoraFormGroup.status == 'VALID' ? false : true"
+                (click)="generarDocumento(diligenciarCorreo)">Generar
+                Documento</button>
             <button type="button" class="btn btn-secondary" (click)="closeModal()">Cerrar</button>
         </div>
     </form>
 </ng-template>
+
+
+<ng-template #diligenciarCorreo let-c="close" let-d="dismiss">
+
+    <div class="modal-header">
+        <h4 class="modal-title" style="text-align: center; width: 100%;">
+            Correo electronico destino
+        </h4>
+        <button type="button" class="close" aria-label="Close" (click)="closeModal()">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <div class="row" [formGroup]="emailFormGroup">
+            <div class="col-3" style="min-width: 50%;">
+                texto
+            </div>
+            <div class="col-3" style="min-width: 50%;">
+                <input type="text" class="form-control" formControlName="email"
+                    ngbTooltip="Debe ser una direccion valida" placement="right" ngDefaultControl />
+                <span
+                    *ngIf="emailFormGroup.controls['email'].hasError('pattern') && (emailFormGroup.controls['email'].dirty || emailFormGroup.controls['email'].touched)"
+                    class="text-danger">
+                    Email invalido !
+                </span>
+            </div>
+        </div>
+
+    </div>
+    <div class="modal-footer">
+        <label style="font-weight: bold; color: red;;">Si cancela, se perderan los datos diligenciados
+            anteriormente.</label>
+        <button type="button" class="btn btn-primary" [disabled]="emailFormGroup.status == 'VALID' ? false : true" (click)="enviarDocumento()">Enviar</button>
+        <button type="button" class="btn btn-secondary" (click)="closeModal()">Cancelar Envio</button>
+    </div>
+</ng-template>
+
+<ngb-toast
+  *ngIf="showToast"
+  header="Autohide can be cancelled"
+  [delay]="5000"
+  [autohide]="autohide"
+  (hide)="show = false; autohide = true"
+  [class.bg-danger]="!autohide"
+>
+  
+  <div *ngIf="!autohide">
+    I will remain visible until you leave again.
+  </div>
+</ngb-toast>
