--- a/src/app/components/mapfre/mapfre.component.html
+++ b/src/app/components/mapfre/mapfre.component.html
@@ -1,4 +1,4 @@
-<section>
+<!-- <section>
     <div class="row" style="color: #ec2c01;">
         <div class="col-3">
             <img src="./../../../assets/images/mapfre.jpg" alt="" width="228px" height="110px">
@@ -10,7 +10,7 @@
             PYMES
         </div>
     </div>
-    <!-- Datos de cliente  INDEPENDIZAR EN SUB COMPONENTE PARA LA REUTILIZACION -->
+    
     <div class="row" style="color: #41a02c; margin-bottom: 10px;margin-top: 25px;">
         <div class="col-12">Datos de cliente</div>
         <hr style="width: 98%; background: #41a02c; margin: auto;">
@@ -57,7 +57,7 @@
             <input type="text" class="form-control" />
         </div>
     </div>
-    <!-- Datos de Riesgo -->
+    
     <div class="row" style="color: #41a02c; margin-bottom: 10px;">
         <div class="col-12">
             Datos de Riesgo
@@ -152,7 +152,7 @@
             <input type="text" class="form-control" />
         </div>
     </div>
-    <!-- Relacion de bienes INDEPENDIZAR EN SUB COMPONENTE PARA LA REUTILIZACION -->
+    
     <div class="row" style="margin-bottom: 10px;">
         <div class="col-4" style="color: #41a02c;">Relacion de bienes</div>
         <div class="col-4" style="color: #41a02c;">Valores asegurados</div>
@@ -164,7 +164,6 @@
             </div>
         </div>
     </div>
-    <!-- Relacion de bienes INDEPENDIZAR EN SUB COMPONENTE PARA LA REUTILIZACION -->
     <div class="row" style="margin-bottom: 10px;">
         <div class="col-12" style="color: #41a02c;">Amparos</div>
         <hr style="width: 98%; background: #41a02c; margin: auto;">
@@ -175,7 +174,6 @@
             </div>
         </div>
     </div>
-    <!-- Asistencia PYMES INDEPENDIZAR EN SUB COMPONENTE PARA LA REUTILIZACION -->
     <div class="row" style="margin-bottom: 10px;">
         <div class="col-4" style="color: #41a02c;">Asistencia PYME</div>
         <hr style="width: 98%; background: #41a02c; margin: auto;">
@@ -184,4 +182,4 @@
             <div class="col-4" style="text-align: left">{{item.valor}}</div>
         </div>
     </div>
-</section>
+</section> -->
