--- a/src/app/components/maestro/maestro.component.html
+++ b/src/app/components/maestro/maestro.component.html
@@ -9,6 +9,20 @@
         </p>
     </span>
 </div>
-<img src="./../../../assets/images/imagenFondo.webp" alt="" style="width: 100%; height: 700px; object-fit: cover">
-<app-aseguradora id="Aseguradoras"></app-aseguradora>
+<img src="./../../../assets/images/imagenFondo.jpg" alt="" style="width: 100%; height: 700px; object-fit: cover">
+<app-aseguradora id="Aseguradoras" ></app-aseguradora>
+<div class="row" class="vision-mision" id="Vision">
+    <div class="col-12" style="background: rgba(18, 49, 91, 0.7); color: #8cd624; 
+    padding: 80px 15%; font-size: 1.5em" width="100%;">
+        <p style="color: white; width: 100%; text-align: center; font-size: 2em; font-weight: bold;">VISIÓN</p>
+        H.C.S Impulsa a la innovación del Sector Asegurador, con implementación y surgimiento de necesidades desde el
+        punto de vista Aprendiz e Instructor, llevándolo así al mercado competitivo y fidelización de producto.
+        <br>
+        <p style="color: white; width: 100%; text-align: center; font-size: 2em; font-weight: bold;">MISION</p>
+        H.C.S Esta implementada para presentes y futuros aprendices cuya finalidad es orientar, facilitar, analizar las
+        cotizaciones en linea de manera eficiente dentro de la formacion; Bajo la supervision de instructores para
+        conocer la mejor propuesta de 0 a 100; atento a la vanguardia de innovación en el sector asegurador
+    </div>
+</div>
+
 <app-footer></app-footer>
