--- a/src/app/components/maestro/maestro.component.scss
+++ b/src/app/components/maestro/maestro.component.scss
@@ -1,10 +1,14 @@
 .telon {
-    overflow: hidden;
-    position: absolute;
-    background-color: rgba(0, 48, 91, 0.65);
-    font-size: 5em;
-    font-weight: bold;
-    color: white;
-    width: 500px;
-    height: 700px;
+  overflow: hidden;
+  position: absolute;
+  background-color: rgba(0, 48, 91, 0.65);
+  font-size: 5em;
+  font-weight: bold;
+  color: white;
+  width: 500px;
+  height: 700px;
+}
+
+.vision-mision {
+  background-image: url("./../../../assets/images/mision-vision.jpg");
 }
