--- a/src/app/components/maestro/maestro.component.html
+++ b/src/app/components/maestro/maestro.component.html
@@ -10,7 +10,7 @@
     </span>
 </div>
 <img src="./../../../assets/images/imagenFondo.jpg" alt="" style="width: 100%; height: 700px; object-fit: cover">
-<app-aseguradora id="Aseguradoras" ></app-aseguradora>
+<app-aseguradora id="Aseguradoras"></app-aseguradora>
 <div class="row" class="vision-mision" id="Vision">
     <div class="col-12" style="background: rgba(18, 49, 91, 0.7); color: #8cd624; 
     padding: 80px 15%; font-size: 1.5em" width="100%;">
@@ -22,6 +22,14 @@
         H.C.S Esta implementada para presentes y futuros aprendices cuya finalidad es orientar, facilitar, analizar las
         cotizaciones en linea de manera eficiente dentro de la formacion; Bajo la supervision de instructores para
         conocer la mejor propuesta de 0 a 100; atento a la vanguardia de innovación en el sector asegurador
+    </div>
+</div>
+<div class="row" style="justify-content: center" id="Lideres">
+    <h2 style="width: 100%; text-align: center; color:#0b3259; margin: 70px;">
+        NUESTROS LIDERES
+    </h2>
+    <div class="col-3" *ngFor="let item of arregloPerfiles">
+        <app-tarjeta-usuario [usuario]="item"></app-tarjeta-usuario>
     </div>
 </div>
 
