--- a/src/app/components/pymes/pymes.component.html
+++ b/src/app/components/pymes/pymes.component.html
@@ -104,7 +104,7 @@
             <div class="row" style="margin-bottom: 20px;">
                 <div class="col-2"> Prima Anual:</div>
                 <div class="col-2">
-                    {{ totalValorAsegurado ? totalValorAsegurado * (+propiedadesAseguradora.tasaPymes) : 0}}
+                    {{ prima }}
                 </div>
                 <div class="col-2"> Iva:</div>
                 <div class="col-2">
