--- a/src/app/components/aseguradora/aseguradora.component.html
+++ b/src/app/components/aseguradora/aseguradora.component.html
@@ -8,7 +8,7 @@
     <div class="col-7">
         <div class="row">
             <div class="col-6" *ngFor="let item of aseguradorasList">
-                <a class="image-container" (click)="selectCotizador(item, seleccionarCotizador, 'myCustomModalClass')"
+                <a class="image-container" (click)="selectCotizador(item, seleccionarCotizador)"
                     style="margin: 40px">
                     <img src="{{item.imagen}}" width="228px" height="110px" placement="bottom"
                         ngbPopover="PYMES y Copropiedad" triggers="mouseenter:mouseleave" popoverTitle="Disponibles">
